[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "xlight"
version = "1.0.0"
description = "Cross-Platform Screen Brightness & Color Temperature Controller"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "XLight Team"}
]
keywords = ["brightness", "screen", "monitor", "gamma", "color-temperature", "display"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "screen_brightness_control>=0.20.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/quangminh1212/XLight"
Repository = "https://github.com/quangminh1212/XLight"
Issues = "https://github.com/quangminh1212/XLight/issues"

[project.scripts]
xlight = "xlight:main"

[tool.setuptools]
py-modules = ["xlight"]
